--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    // "python.analysis.typeCheckingMode": "basic"
+    "files.insertFinalNewline": true,
+    "python.analysis.typeCheckingMode": "basic"
 }
