Adding final pieces to get it to work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "files.insertFinalNewline": true,
-    "python.analysis.typeCheckingMode": "basic"
+    // "python.analysis.typeCheckingMode": "basic"
 }
