--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
     "files.insertFinalNewline": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "*test*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
+    "python.testing.pytestArgs": [
+        "src"
+    ],
+    "python.testing.cwd": "${workspaceFolder}"
     // "python.analysis.typeCheckingMode": "basic"
 }
+//src\tests\routes\test_expenses.py
