--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 click==8.1.3
+python-dotenv
+flask_cors
+Flask-Login
 Flask==2.2.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
-Werkzeug==2.2.2
-Flask-Login
-pyOpenSSL
 oauthlib
+psycopg[binary]
+pyjwt
+pyOpenSSL
 requests
 SqlAlchemy
 sqlalchemy-utils
-psycopg[binary]
-flask_cors
+Werkzeug==2.2.2
