--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,7 @@ services:
       - '5432:5432'
     volumes: 
       - db:/var/lib/postgresql/data
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
 volumes:
   db:
     driver: local
